# dialectical-othello

./: .gitignore  README.md  pyproject.toml
dialectical_othello/: __init__.py  board.py  core_labels.py  engine.py  evidence.py  game_result.py  graded_policy.py  probe.py  search.py  search_backends.py  witnesses.py
tests/: _legal_moves_reference.py  _minimax_reference.py  test_board_properties.py  test_engine_end_to_end.py  test_graded_policy.py  test_play_vs_random.py  test_probe.py  test_search_properties.py  test_smoke.py  test_witness_properties.py  test_witnesses.py
