[project]
name = "dialectical-othello"
version = "0.1.0"
description = "A dialectical Othello engine experiment built around argument-graph move selection"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "ctoth" },
]
keywords = [
    "othello",
    "reversi",
    "argumentation",
    "formal-argumentation",
    "dialectical-reasoning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "formal-argumentation @ git+https://github.com/ctoth/argumentation.git@d47c87003afdce450bfeff10f242309c510f1690",
    "doxa @ git+https://github.com/ctoth/doxa.git@8ba6968f3c40c963786fae504a1719b02b2d17d0",
    "dialectical-games @ git+https://github.com/ctoth/dialectical-games.git@1cb7af21a5a18b2f47653615f0c5bced60409786",
]

[project.urls]
Homepage = "https://github.com/ctoth/dialectical-othello"
Repository = "https://github.com/ctoth/dialectical-othello"
Issues = "https://github.com/ctoth/dialectical-othello/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["dialectical_othello"]

[tool.pyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
include = ["dialectical_othello", "tests"]
extraPaths = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: focused unit-level contract tests",
    "property: property-based or metamorphic tests",
    "differential: differential or oracle-comparison tests",
]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "pyright>=1.1.390",
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]
